--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.4.0
+bcrypt==4.0.1
 certifi==2024.7.4
 click==8.1.7
 dnspython==2.6.1
@@ -18,6 +19,8 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 orjson==3.10.6
+passlib==1.7.4
+psycopg2-binary
 pyasn1==0.6.0
 pydantic==2.8.2
 pydantic_core==2.20.1
@@ -25,6 +28,7 @@ Pygments==2.18.0
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.2
 rich==13.7.1
 rsa==4.9
