--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ orjson==3.10.6
 pandas==2.2.2
 passlib==1.7.4
 pillow==10.4.0
-psycopg2==2.9.9
+psycopg2-binary
 pyasn1==0.6.0
 pydantic==2.8.2
 pydantic_core==2.20.1
