--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ email_validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.111.0
 fastapi-cli==0.0.5
+filelock==3.15.4
+fsspec==2024.6.1
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
@@ -18,13 +20,19 @@ Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+mpmath==1.3.0
+networkx==3.2.1
+numpy==2.0.1
 orjson==3.10.6
+pandas==2.2.2
 passlib==1.7.4
+pillow==10.4.0
 psycopg2-binary
 pyasn1==0.6.0
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.9
@@ -37,9 +45,13 @@ six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.31
 starlette==0.37.2
+sympy==1.13.2
+torch==2.4.0
+torchvision==0.19.0
 tqdm==4.66.4
 typer==0.12.3
 typing_extensions==4.12.2
+tzdata==2024.1
 ujson==5.10.0
 uvicorn==0.30.3
 uvloop==0.19.0
