--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ httptools==0.6.1
 httpx==0.27.0
 idna==3.7
 Jinja2==3.1.4
+joblib==1.4.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
@@ -40,12 +41,15 @@ pytz==2024.1
 PyYAML==6.0.2
 rich==13.7.1
 rsa==4.9
+scikit-learn==1.5.1
+scipy==1.13.1
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.31
 starlette==0.37.2
 sympy==1.13.2
+threadpoolctl==3.5.0
 torch==2.4.0
 torchvision==0.19.0
 tqdm==4.66.4
