--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.9
 pytz==2024.1
+PyWavelets==1.6.0
 PyYAML==6.0.2
 rich==13.7.1
 rsa==4.9
